Adjust overflow scroll on page elements to fix height issues

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -108,7 +108,6 @@ h1 {
 
 .infoContainer-cardContainer-card-horizontal {
   width: 100%;
-  background-color: white;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
@@ -131,7 +130,6 @@ h1 {
   display: flex;
   flex-direction: row;
   margin: 1%;
-  overflow: scroll;
 }
 
 .sleep-cards-vertical {
@@ -188,6 +186,7 @@ h1 {
   justify-content: flex-start;
   width: 50%;
   overflow-wrap: break-word;
+  overflow: scroll;
 }
 
 .card-history-sleep {
@@ -200,6 +199,7 @@ h1 {
   flex-direction: column;
   justify-content: flex-start;
   width: 50%;
+  overflow: scroll;
 }
 
 .card-history-activity {
